--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -8,15 +8,18 @@ license = "Apache-2.0"
 edition = "2018"
 
 [features]
-no-entrypoint = []
 program = ["solana-sdk/program"]
-default = ["solana-sdk/default"]
 test = ["solana-sdk/default"]
+default = []
+no-entrypoint = []
 
 [dependencies]
-solana-sdk = { version = "1.3.17", default-features = false, optional = true }
+solana-sdk = { version = "1.3.17", default-features = false }
 thiserror = "1.0"
-borsh = "0.7.1"
+borsh-v = "0.7.3" # https://github.com/vidhunv1/borsh/
+
+[dev-dependencies]
+rand = { version = "0.7.0"}
 
 [lib]
 name = "program"
