--- a/web/package.json
+++ b/web/package.json
@@ -26,14 +26,19 @@
   "dependencies": {
     "@solana/web3.js": "^0.82.0",
     "borsh": "^0.2.6",
+    "classnames": "^2.2.6",
     "json-to-pretty-yaml": "^1.2.2",
     "lodash": "^4.17.20",
     "next": "9.5.5",
     "react": "16.14.0",
+    "react-chat-ui": "^0.4.0",
     "react-dom": "16.14.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
