--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "sol:scratchpad": "ts-node --compiler-options={\\\"module\\\":\\\"commonJS\\\"} cli/scratchpad.ts info"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@solana/web3.js": "^0.82.0",
     "borsh": "^0.2.6",
     "classnames": "^2.2.6",
@@ -31,15 +32,19 @@
     "lodash": "^4.17.20",
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-chat-ui": "^0.4.0",
     "react-dom": "16.14.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@types/jest": "^26.0.15",
+    "@types/react-redux": "^7.1.11",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
