--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2018"
 
 [features]
 no-entrypoint = []
-test-bpf = []
 
 [dependencies]
 num-derive = "0.3.3"
@@ -19,8 +18,18 @@ thiserror = "1.0.24"
 borsh = "0.9.1"
 
 [dev-dependencies]
-rand = { version = "0.7.0"}
+solana-sdk = "1.7.10"
+solana-client = "1.7.10"
+rand = "0.8.3"
+solana-program-test = "1.7.10"
+tokio = {version="1.10.0", features = ["macros"]}
+futures = "0.3.15"
+futures-util = "0.3.15"
+rand_distr = "0.4.0"
+spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
 
 [lib]
 name = "program"
 crate-type = ["cdylib", "lib"]
+
+
