--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 
 [features]
 no-entrypoint = []
+test-bpf = []
 
 [dependencies]
 num-derive = "0.3.3"
@@ -29,7 +30,6 @@ rand_distr = "0.4.0"
 spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
 
 [lib]
-name = "program"
 crate-type = ["cdylib", "lib"]
 
 
